<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/carddialog_shape"
        android:paddingBottom="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/title_edit_kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/editkelas"
            android:textColor="@color/bluepu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <!--        <EditText-->
        <!--            android:id="@+id/etNo_edit"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginEnd="20dp"-->
        <!--            android:background="@drawable/edittext_shape"-->
        <!--            android:hint="@string/no"-->
        <!--            android:inputType="text"-->
        <!--            android:paddingStart="15dp"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="16sp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/title_edit_kelas" />-->

        <EditText
            android:id="@+id/etKelas_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/nkls"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_edit_kelas" />

        <EditText
            android:id="@+id/etKompetensi_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/komp"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etKelas_edit"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSimpan_edit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/smp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etKompetensi_edit" />

        <Button
            android:id="@+id/btnLihat_edit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button"
            android:text="@string/lht"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toEndOf="@+id/btnSimpan_edit"
            app:layout_constraintTop_toBottomOf="@id/etKompetensi_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>