<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textColor="@color/bluepu"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="20dp"
                android:onClick="onClick"
                android:src="@drawable/exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <ImageView
        android:id="@+id/img"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_undraw_programmer_imem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/menuInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cardmenu_shape"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnInput"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:background="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/input"
                android:textColor="@color/bluepu"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/menuTransaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/menuInput"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cardmenu_shape"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnTransaksi"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:background="@drawable/online_payment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/trans"
                android:textColor="@color/bluepu"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/menuRiwayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuInput">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cardmenu_shape"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnRiwayat"
                android:layout_width="85dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:background="@drawable/history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/riwayat"
                android:textColor="@color/bluepu"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/menuLaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/menuRiwayat"
        app:layout_constraintTop_toBottomOf="@+id/menuTransaksi">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cardmenu_shape"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnLaporan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:background="@drawable/report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/lap"
                android:textColor="@color/bluepu"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>